# port_apollo

./: .gitignore  .gitmodules  .travis.yml  README.md
common/: CMakeLists.txt  README.md  apollo_app.h  common_tests.cpp  package.xml
common/adapters/: adapter_manager.cc  adapter_test.cc
common/configs/: config_gflags.cc  vehicle_config_helper.h  vehicle_config_helper_test.cc
common/configs/proto/: vehicle_config.proto
common/filters/: digital_filter.cc  digital_filter_coefficients.cc  digital_filter_coefficients_test.cc  mean_filter.cc  mean_filter_test.cc
common/kv_db/: kv_db.cc  kv_db_test.cc
common/math/: CMakeLists.txt  aaboxkdtree2d.h  aaboxkdtree2d_test.cc  angle_test.cc  box2d.cc  box2d.h  box2d_test.cc  cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h  euler_angles_zxy.h  extended_kalman_filter.h  integral.cc  integral_test.cc  kalman_filter.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation_test.cc  linear_quadratic_regulator.cc  math_utils.cc  math_utils_test.cc  matrix_operations.cc  matrix_operations.h  matrix_operations_test.cc  mpc_solver_test.cc  nonlinear_interpolation.cc  nonlinear_interpolation.h  path_matcher.cc  path_matcher.h  polygon2d.cc  polygon2d_test.cc  quaternion.h  quaternion_test.cc  search.cc  search_test.cc  sin_table.cc
common/math/qp_solver/: active_set_qp_solver.cc  active_set_qp_solver.h  qp_solver.cc  qp_solver_gflags.cc
common/monitor_log/: monitor_log_buffer.cc  monitor_log_buffer.h  monitor_log_buffer_test.cc  monitor_logger.cc  monitor_logger_test.cc
common/proto/: header.proto
common/status/: status.h  status_test.cc
common/time/: time.h  timer.h
common/util/: CMakeLists.txt  ctpl_stl_test.cc  disjoint_set_test.cc  factory.h  factory_test.cc  file.cc  file.h  file_test.cc  http_client.cc  http_client.h  json_util.h  json_util_test.cc  lru_cache_test.cc  points_downsampler.h  string_tokenizer_test.cc  string_util.cc  string_util.h  threadpool_test.cc
common/vehicle_state/: vehicle_state_provider.cc  vehicle_state_provider_test.cc
src/common/: CMakeLists.txt  apollo_app.cc
src/common/adapters/: adapter.h  adapter_gflags.cc  adapter_manager.h  message_adapters.h
src/common/configs/: vehicle_config_helper.cc  vehicle_config_helper.h
src/common/filters/: digital_filter_test.cc
src/common/math/: aabox2d.cc  aabox2d.h  aabox2d_test.cc  angle.cc  cartesian_frenet_conversion_test.cc  euler_angles_zxy_test.cc  hermite_spline.h  kalman_filter_test.cc  line_segment2d_test.cc  linear_interpolation.h  math_utils.h  mpc_solver.cc  polygon2d.h  vec2d.cc  vec2d_test.cc
src/common/math/qp_solver/: active_set_qp_solver_test.cc
src/common/monitor_log/: monitor_logger.h
src/common/proto/: header.proto
src/common/status/: status.h
src/common/time/: time.h  time_test.cc  time_util.h  timer.cc  timer_test.cc
src/common/transform_listener/: transform_listener.cc  transform_listener.h
src/common/util/: json_util.cc  points_downsampler_test.cc  string_tokenizer.cc  string_util_test.cc  util.cc  util.h  util_test.cc
src/common/vehicle_state/: vehicle_state_provider.h
src/planning/: CMakeLists.txt  main.cc  package.xml  planning.cc  planning.h  planning_tests.cc
src/planning/common/: change_lane_decider.cc  change_lane_decider.h  frame.cc  frame.h  frame_test.cc  indexed_list_test.cc  indexed_queue_test.cc  lag_prediction.cc  obstacle.cc  obstacle.h  obstacle_test.cc  path_decision.cc  path_decision.h  path_obstacle.cc  path_obstacle.h  path_obstacle_test.cc  planning_gflags.cc  planning_thread_pool.cc  planning_util.cc  planning_util.h  reference_line_info.cc  reference_line_info.h  speed_limit.cc  speed_limit_test.cc
src/planning/common/path/: discretized_path.cc  discretized_path_test.cc  frenet_frame_path.cc  frenet_frame_path.h  frenet_frame_path_test.cc  path_data.cc  path_data.h
src/planning/common/speed/: speed_data.cc  st_boundary.cc  st_boundary.h  st_boundary_test.cc  st_point.cc
src/planning/common/trajectory/: discretized_trajectory.cc  discretized_trajectory.h  discretized_trajectory_test.cc  publishable_trajectory.cc  publishable_trajectory.h  publishable_trajectory_test.cc  trajectory_stitcher.cc  trajectory_stitcher.h
src/planning/constraint_checker/: collision_checker.cc  collision_checker.h  constraint_checker.cc  constraint_checker.h  constraint_checker1d.cc  constraint_checker1d.h
src/planning/integration_tests/: garage_test.cc  navigation_mode_test.cc  planning_test_base.cc  planning_test_base.h  sunnyvale_big_loop_test.cc  sunnyvale_loop_test.cc
src/planning/lattice/behavior/: feasible_region.cc  path_time_graph.cc  path_time_graph.h  prediction_querier.cc  prediction_querier.h
src/planning/lattice/trajectory1d/: constant_deceleration_trajectory1d.cc  constant_deceleration_trajectory1d.h  lattice_trajectory1d.cc  lattice_trajectory1d.h  piecewise_acceleration_trajectory1d.cc  piecewise_acceleration_trajectory1d.h  piecewise_trajectory1d.cc  piecewise_trajectory1d.h  standing_still_trajectory1d.cc  standing_still_trajectory1d.h
src/planning/lattice/trajectory_generation/: backup_trajectory_generator.cc  backup_trajectory_generator.h  end_condition_sampler.cc  end_condition_sampler.h  piecewise_braking_trajectory_generator.cc  piecewise_braking_trajectory_generator.h  trajectory1d_generator.cc  trajectory1d_generator.h  (+4 more)
src/planning/math/: CMakeLists.txt  curve_math.cc  curve_math_test.cc  polynomial_xd.cc
src/planning/planner/: planner.h
src/planning/reference_line/: qp_spline_reference_line_smoother.cc  qp_spline_reference_line_smoother.h  qp_spline_reference_line_smoother_test.cc  reference_line.cc  reference_line.h  reference_line_provider.cc  reference_line_provider.h  reference_line_smoother.h  reference_point.cc  smoother_util.cc  spiral_problem_interface.cc  spiral_problem_interface.h  spiral_reference_line_smoother.cc  spiral_reference_line_smoother.h
src/planning/tasks/: path_optimizer.cc  path_optimizer.h  speed_optimizer.cc  speed_optimizer.h  task.cc  task.h
src/planning/tools/: planning_stats.cc
(+167 files in other folders)
