<package format="2">
    <name>common</name>
    <description>apollo common module</description>
    <maintainer email="yu.zhang.bit@gmail.com">Yu Zhang</maintainer>
    <license>Apache 2.0</license>
    <version>3.0.0</version>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>glog_catkin</depend>
    <depend>roscpp</depend>
</package>
